--- a/GraphicCanvas/index.html
+++ b/GraphicCanvas/index.html
@@ -22,15 +22,15 @@
             margin: 20px;
         }
         canvas{
-            background-color: black;
+            background-color: white;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Canvas HTML y JS</h1>
-        <canvas id="canva" width="400" height="400"></canvas>
+        <canvas id="canva" width="650" height="400"></canvas>
     </div>
-    <script src="./dibujo.js"></script>
+    <script src="./bolita.js"></script>
 </body>
 </html>
