--- a/GraphicCanvas/index.html
+++ b/GraphicCanvas/index.html
@@ -31,6 +31,6 @@
         <h1>Canvas HTML y JS</h1>
         <canvas id="canva" width="650" height="400"></canvas>
     </div>
-    <script src="./bolita.js"></script>
+    <script src="./direcciones.js"></script>
 </body>
 </html>
