--- a/GraphicCanvas/index.html
+++ b/GraphicCanvas/index.html
@@ -24,13 +24,15 @@
         canvas{
             background-color: white;
         }
+
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Canvas HTML y JS</h1>
-        <canvas id="canva" width="650" height="400"></canvas>
+        <h2>Se ha comido <span></span></h2>
+        <canvas id="canva" width="600" height="400"></canvas>
     </div>
-    <script src="./direcciones.js"></script>
+    <script src="./snake.js"></script>
 </body>
 </html>
